updated home page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>kelseywilliams.net home</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,10 @@
     </head>
     <body>
         <h1>kelseywilliams.net home</h1>
-        <p>welcome to kelseywilliams.net.  To use my basic read/write api head over to <a href="https://api.kelseywilliams.net">https://api.kelseywilliams.net</a><br><br>head over to <a href="https://kelseywilliams.net/TTS-Server/">https://kelseywilliams.net/TTS-Server/</a> to visit one of my first and now defunct projects on this site.  the premise of tts-server was that users would enter messages into the text box and they would be read out loud to me by google's text to speech api.</p>
+        <p>welcome to kelseywilliams.net.</p>
+        <h2>projects and pages on this site</h2>
+        <p>my basic read/write  restful api: <a href="https://api.kelseywilliams.net">https://api.kelseywilliams.net</a><br><br>tts-server (now defunct), intended to speak messages sent to the website through a speaker: <a href="https://kelseywilliams.net/TTS-Server/">https://kelseywilliams.net/TTS-Server/</a></p>
+        <h2>about me</h2>
+        <p>hi.  my name is kelsey williams.  i'm a self taught full stack software developer and i've been writing software and programming for 3+ years.  this website is less of a resume or place to advertise any business and more of a playground to host projects i find fun or just to test new things.  i also hope to start a blog or youtube channel when i find the time to share some of what i've learned over these past years with the rest of the world.  computers are one of the biggest joys i've found in life and i don't think there's anything more human than wanting to share what makes us happy.  you can reach me at kelseywilliams1200@gmail.</p>
     </body>
 </html>
