added reasoning to lack of design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>kelseywilliams.net home</h1>
-        <p>welcome to kelseywilliams.net.</p>
+        <p>welcome to kelseywilliams.net.  this site is left intentionally a little lack luster in support of tim berners lee's idea that "generality and portability are more important than fancy graphics techniques and complex extra facilities." <a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a>(march 1989)</p>
         <h2>projects and pages on this site</h2>
         <p>my basic read/write  restful api: <a href="https://api.kelseywilliams.net">https://api.kelseywilliams.net</a><br><br>tts-server (now defunct), intended to speak messages sent to the website through a speaker: <a href="https://kelseywilliams.net/TTS-Server/">https://kelseywilliams.net/TTS-Server/</a></p>
         <h2>about me</h2>
