--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1>kelseywilliams.net home</h1>
-        <p>welcome to kelseywilliams.net.  this site is left intentionally a little lack luster in support of tim berners lee's idea that "generality and portability are more important than fancy graphics techniques and complex extra facilities." <a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a>(march 1989)</p>
-        <h2>projects and pages on this site</h2>
+        <p>welcome to kelseywilliams.net.  this site is left intentionally a little lack luster in support of tim berners-lee's idea that "generality and portability are more important than fancy graphics techniques and complex extra facilities." <a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a> (march 1989)</p>
+        <h2>projects and pages</h2>
         <p>my basic read/write  restful api: <a href="https://api.kelseywilliams.net">https://api.kelseywilliams.net</a><br><br>tts-server (now defunct), intended to speak messages sent to the website through a speaker: <a href="https://kelseywilliams.net/TTS-Server/">https://kelseywilliams.net/TTS-Server/</a></p>
         <h2>about me</h2>
         <p>hi.  my name is kelsey williams.  i'm a self taught full stack software developer and i've been writing software and programming for 3+ years.  this website is less of a resume or place to advertise any business and more of a playground to host projects i find fun or just to test new things.  i also hope to start a blog or youtube channel when i find the time to share some of what i've learned over these past years with the rest of the world.  computers are one of the biggest joys i've found in life and i don't think there's anything more human than wanting to share what makes us happy.  you can reach me at kelseywilliams1200@gmail.</p>
