added favorite quotes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <li>text-to-speech server (defunct) <a href="https://kelseywilliams.net/TTS-Server/">https://kelseywilliams.net/TTS-Server/</a>: a page for speaking sent messages outloud.</li>
             </ul>
         </ul>
-        <footer>*footnote: this site is left intentionally a little lack luster in support of tim berners-lee's idea that "generality and portability are more important than fancy graphics techniques and complex extra facilities." <a href="https://www.w3.org/History/1989/proposal.html">Information Management: A Proposal</a> (march 1989)</p></footer>
+        <h2>my favorite quotes</h2>
+        <ul>
+            <li><i>"We should work toward a universal linked information system, in which generality and portability are more important than fancy graphics techniques and complex extra facilities."</i><br><br>Tim Berners-Lee. "Information Management: A Proposal." <i>w3.org</i>, march 1989, <a href="https://www.w3.org/History/1989/proposal.html">https://www.w3.org/History/1989/proposal.html,</a> accessed may 23, 2021</li>
+        </ul>
     </body>
 </html>
